fixed features image z-index issue

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -469,6 +469,7 @@ body {
   width: 72px;
   opacity: 0.5;
   margin-bottom: 0.5em;
+  z-index: -10;
 }
 
 //------------------------------------------- RESULTS --------------------------------------------------//
@@ -1371,7 +1372,6 @@ body {
   .result__thumbnail-img {
     width: 100%;
     height: auto;
-    object-fit: contain;
     border-radius: 4px 4px 4px 16px;
     opacity: 1;
     transition: all 0.5s ease-in-out;
